Add some classes and less styles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <header-nav>
       <ul class="header-link">
-        <li><a href="#">Treloo</a></li>
+        <li class="Treloo"><a href="#">Treloo</a></li>
         <li><a href="#">Review</a></li>
         <li><a href="#">Trips</a></li>
         <li><a href="#">Alerts</a></li>
@@ -23,8 +23,8 @@
         <li><a href="#">Blog</a></li>
       </ul>
     </header-nav>
-    <content> <h2>Discover Your life, Travel Where You Want</h2>
-    <p>Would you explore natural paradise in the world lets find the best destination in the world</p>
+    <content class="header-text"> <h2>Discover Your life, Travel Where You Want</h2>
+    <p class="header-text-btn">Would you explore natural paradise in the world lets find the best destination in the world</p>
     </content>
   </header>
   <header-top-box>
