Add some images, correcting some classes, add some styles and changes

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/Style/style.css">
   <title>Treloo</title>
-  <!-- Poppins 500 - 600 -->
 </head>
 <body>
   <div class="container">
   <header>
-    <header-nav>
+    <div class="header-nav">
       <ul class="header-link">
         <li class="Treloo"><a href="#">Treloo</a></li>
         <li><a href="#">Review</a></li>
@@ -22,27 +21,45 @@
         <li><a href="#">Blog</a></li>
         <li><a href="#">Blog</a></li>
       </ul>
-    </header-nav>
-    <content class="header-text"> <h2>Discover Your life, Travel Where You Want</h2>
-    <p class="header-text-btn">Would you explore natural paradise in the world lets find the best destination in the world</p>
-    </content>
+    </div>
+    <div class="header-content">
+    <h2 class="content-txt">Discover Your life, <br> Travel Where You Want</h2>
+    <p class="header-text-btn">Would you explore natural paradise in the world lets find the best <br> destination in the world</p>
+    </div>
   </header>
-  <header-top-box>
-    <a href="#">Flight</a>
-    <a href="#">Hotel</a>
-  </header-top-box>
-  <header-bt-box>
-    <header-card-box-1>
+  <div class="header-top-box">
+    <img src="/Image/Airplane Mode One.png" alt="Flying_plane"> <a href="#">Flight</a>
+    <img src="/Image/Hotel Star.png" alt="Hotel"> <a href="#">Hotel</a>
+  </div>
+  <div class="header-bt-box">
+    <div class="header-card-box-1">
     <p>Living from Dubai</p>
+    <img src="/Image/Airplane Mode On.png" alt="Airplane">
     <p>Going to New York</p>
-    </header-card-box-1>
-    <header-card-box-2>
+    </div>
+    <div class="header-card-box-2">
       <p></p>
       <p></p>
-    </header-card-box-2>
+    </div>
 
-  </header-bt-box>
+  </div>>
+
+  <div class="special-upcoming">
+<div>
+  <h2 class="sp-txt"> Special upcoming offers</h2>
+</div>
+<div>
+<ul>
+  <li>Team</li>
+  <li>Couple</li>
+  <li>Family</li>
+</ul>
+</div>
+<div>
 
 </div>
-/body>
+  </div>
+
+</div>
+</body>
 </html>
