marking borders size and changing some styles

--- a/index.html
+++ b/index.html
@@ -11,55 +11,57 @@
 </head>
 <body>
   <div class="container">
-  <header>
-    <div class="header-nav">
-      <ul class="header-link">
-        <li class="Treloo"><a href="#">Treloo</a></li>
-        <li><a href="#">Review</a></li>
-        <li><a href="#">Trips</a></li>
-        <li><a href="#">Alerts</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Blog</a></li>
-      </ul>
+    <header>
+      <div class="header-nav">
+        <ul class="header-link">
+          <li class="Treloo"><a href="#">Treloo</a></li>
+          <li><a href="#">Review</a></li>
+          <li><a href="#">Trips</a></li>
+          <li><a href="#">Alerts</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Blog</a></li>
+        </ul>
+      </div>
+      <div class="header-content">
+        <h2 class="content-txt">Discover Your life, <br> Travel Where You Want</h2>
+        <p class="header-text-btn">Would you explore natural paradise in the world lets find the best <br> destination in the world</p>
+      </div>
+    </header>
+    <div class="header-top-box">
+      <img src="/Image/Airplane Mode One.png" alt="Flying_plane">
+      <a href="#">Flight</a>
+      <img src="/Image/Hotel Star.png" alt="Hotel">
+      <a href="#">Hotel</a>
     </div>
-    <div class="header-content">
-    <h2 class="content-txt">Discover Your life, <br> Travel Where You Want</h2>
-    <p class="header-text-btn">Would you explore natural paradise in the world lets find the best <br> destination in the world</p>
+    <div class="header-bt-box">
+      <div class="header-card-box-1">
+        <p>Living from Dubai</p>
+        <img src="/Image/Airplane Mode On.png" alt="Airplane">
+        <p>Going to New York</p>
+      </div>
+      <div class="header-card-box-2">
+        <p></p>
+        <p></p>
+      </div>
+
+    </div>>
+
+    <div class="special-upcoming">
+      <div>
+        <h2 class="sp-txt"> Special upcoming offers</h2>
+      </div>
+      <div>
+        <ul>
+          <li>Team</li>
+          <li>Couple</li>
+          <li>Family</li>
+        </ul>
+      </div>
+      <div>
+
+      </div>
     </div>
-  </header>
-  <div class="header-top-box">
-    <img src="/Image/Airplane Mode One.png" alt="Flying_plane"> <a href="#">Flight</a>
-    <img src="/Image/Hotel Star.png" alt="Hotel"> <a href="#">Hotel</a>
+
   </div>
-  <div class="header-bt-box">
-    <div class="header-card-box-1">
-    <p>Living from Dubai</p>
-    <img src="/Image/Airplane Mode On.png" alt="Airplane">
-    <p>Going to New York</p>
-    </div>
-    <div class="header-card-box-2">
-      <p></p>
-      <p></p>
-    </div>
-
-  </div>>
-
-  <div class="special-upcoming">
-<div>
-  <h2 class="sp-txt"> Special upcoming offers</h2>
-</div>
-<div>
-<ul>
-  <li>Team</li>
-  <li>Couple</li>
-  <li>Family</li>
-</ul>
-</div>
-<div>
-
-</div>
-  </div>
-
-</div>
 </body>
 </html>
