changing class treloo to logo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <div class="header-nav">
         <ul class="header-link">
-          <li class="Treloo"><a href="#">Treloo</a></li>
+          <li class="Logo"><a href="#">Treloo</a></li>
           <li><a href="#">Review</a></li>
           <li><a href="#">Trips</a></li>
           <li><a href="#">Alerts</a></li>
