changing some styles and adding some html codes

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <header>
       <div class="header-nav">
         <ul class="header-link">
-          <li class="Logo"><a href="#">Treloo</a></li>
-          <li><a href="#">Review</a></li>
-          <li><a href="#">Trips</a></li>
-          <li><a href="#">Alerts</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Blog</a></li>
+          <li><div class="Logo"><a href="#">Treloo</a> </div> </li>
+          <li class="header-link-item"><a href="#">Review</a></li>
+          <li class="header-link-item"><a href="#">Trips</a></li>
+          <li class="header-link-item"><a href="#">Alerts</a></li>
+          <li class="header-link-item"><a href="#">Blog</a></li>
+          <li class="header-link-item"><a href="#">Blog</a></li>
         </ul>
       </div>
       <div class="header-content">
-        <h2 class="content-txt">Discover Your life, <br> Travel Where You Want</h2>
+        <h2 class="content-txt">Discover Your life, Travel  <br> Where You Want</h2>
         <p class="header-text-btn">Would you explore natural paradise in the world lets find the best <br> destination in the world</p>
       </div>
     </header>
@@ -50,16 +50,22 @@
       <div>
         <h2 class="sp-txt"> Special upcoming offers</h2>
       </div>
-      <div>
+      <div class="sp-menu">
         <ul>
           <li>Team</li>
           <li>Couple</li>
           <li>Family</li>
         </ul>
       </div>
-      <div>
+      <div class="sug-ad-box">
+      <div class="sug-ads">
+      </div>
+      <div class="sug-ads">
 
       </div>
+      <div class="sug-ads">
+      </div>
+    </div>
     </div>
 
   </div>
