add some images and filling with some codes html

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <header>
       <div class="header-nav">
         <ul class="header-link">
-          <li><div class="Logo"><a href="#">Treloo</a> </div> </li>
-          <li class="header-link-item"><a href="#">Review</a></li>
-          <li class="header-link-item"><a href="#">Trips</a></li>
-          <li class="header-link-item"><a href="#">Alerts</a></li>
-          <li class="header-link-item"><a href="#">Blog</a></li>
-          <li class="header-link-item"><a href="#">Blog</a></li>
+          <li><div class="Logo"><a class="Header-link-style" href="#">Treloo</a> </div> </li>
+          <li class="header-link-item"><a class="Header-link-style" href="#">Review</a></li>
+          <li class="header-link-item"><a class="Header-link-style" href="#">Trips</a></li>
+          <li class="header-link-item"><a class="Header-link-style" href="#">Alerts</a></li>
+          <li class="header-link-item"><a class="Header-link-style" href="#">Blog</a></li>
+          <li class="header-link-item"><a class="btn-blog" href="#">Blog</a></li>
         </ul>
       </div>
       <div class="header-content">
@@ -29,29 +29,30 @@
     </header>
     <div class="header-top-box">
       <img src="/Image/Airplane Mode One.png" alt="Flying_plane">
-      <a href="#">Flight</a>
+      <a class="Plane" href="#"> Flight</a>
       <img src="/Image/Hotel Star.png" alt="Hotel">
-      <a href="#">Hotel</a>
+      <a class="Plane" href="#"> Hotel</a>
     </div>
     <div class="header-bt-box">
-      <div class="header-card-box-1">
-        <p>Living from Dubai</p>
+      <div class="header-card-box header-card-box-1">
+        <p>Living from <br>Dubai</p>
         <img src="/Image/Airplane Mode On.png" alt="Airplane">
-        <p>Going to New York</p>
+        <p>Going to <br>New York</p>
       </div>
-      <div class="header-card-box-2">
-        <p></p>
-        <p></p>
+      <div class="header-card-box header-card-box-2 ">
+        <p>Leave <br> <img src="/Image/Airplane Mode On-1.png" alt="Flying_plane"> 23 Jan, Sat </p>
+        <img src="/Image/Planner.png" alt="calendar">
+        <p>Return <br> <img src="/Image/Airplane Mode On-2.png" alt="Flying_plane"> 14 Jan, Thu</p>
       </div>
-
-    </div>>
+      <img class="searching-icon" src="/Image/Group 14.png" alt="searching">
+    </div>
 
     <div class="special-upcoming">
       <div>
         <h2 class="sp-txt"> Special upcoming offers</h2>
       </div>
-      <div class="sp-menu">
-        <ul>
+      <div>
+        <ul class="sp-menu">
           <li>Team</li>
           <li>Couple</li>
           <li>Family</li>
@@ -59,11 +60,13 @@
       </div>
       <div class="sug-ad-box">
       <div class="sug-ads">
+        <img src="/Image/offer-1.png" alt="rasm">
       </div>
       <div class="sug-ads">
-
+        <img src="/Image/offer-2.png" alt="rasm">
       </div>
       <div class="sug-ads">
+        <img src="/Image/offer-3.png" alt="rasm">
       </div>
     </div>
     </div>
